[package]
name = "npezza93_tree-sitter-tags"
version = "0.21.1"
license-file = "LICENSE"
description = "Library for extracting tag information"
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Patrick Thomson <patrickt@github.com>",
]
readme = "README.md"
keywords = ["incremental", "parsing", "syntax", "tagging"]
categories = ["parsing", "text-editors"]

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
memchr = "^2.7"
regex = "^1.10"
thiserror = "^1.0"
tree-sitter = ">=0.20"
streaming-iterator = "0.1.9"
